@@ -18,6 +18,6 @@ package ifneeded struct::tree      1.2.2 [list source [file join $dir tree1.tcl]
 package ifneeded struct::matrix    1.2.1 [list source [file join $dir matrix1.tcl]]
 
 if {![package vsatisfies [package provide Tcl] 8.4]} {return}
-package ifneeded struct::list      1.8   [list source [file join $dir list.tcl]]
+package ifneeded struct::list      1.8.1  [list source [file join $dir list.tcl]]
 package ifneeded struct::graph     2.4    [list source [file join $dir graph.tcl]]
 package ifneeded struct::graph::op 0.11.3 [list source [file join $dir graphops.tcl]]
